# M3IM_Mobile

./: M3IM_Mobile.pro  README.md  main.cpp  qml.qrc  qtquickcontrols.conf
nlohmann/: json.hpp  json_fwd.hpp
nlohmann/detail/: exceptions.hpp  json_pointer.hpp  meta.hpp
nlohmann/detail/input/: input_adapters.hpp  lexer.hpp
nlohmann/detail/iterators/: iteration_proxy.hpp
nlohmann/detail/output/: serializer.hpp
src/: contacts_model.hpp  dialogs_model.hpp  instancemessenger.cpp  instancemessenger.h  instancemessenger_global.h  tcp_client.cpp  tcp_client.h
tests/: CMakeLists.txt  mock_tcp_server.hpp  unit_send_request_code.hpp  unit_send_request_contacts.hpp  unit_send_request_jwt.hpp  unit_send_request_message.hpp  unit_send_request_presence.hpp
ui/: AuthorizationPage.qml  FriendsPage.qml  MessagesPage.qml  Settings.qml  main.qml
